--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
 		<link rel="shortcut icon" href="/static/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
-		<meta name="apple-mobile-web-app-title" content="Open WebUI" />
+		<meta name="apple-mobile-web-app-title" content="MTN Chat" />
 
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 		<meta
@@ -16,11 +16,11 @@
 		/>
 		<meta name="theme-color" content="#171717" />
 		<meta name="robots" content="noindex,nofollow" />
-		<meta name="description" content="Open WebUI" />
+		<meta name="description" content="MTN Chat" />
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="MTN Chat"
 			href="/opensearch.xml"
 		/>
 		<script src="/static/loader.js" defer></script>
@@ -102,7 +102,7 @@
 			})();
 		</script>
 
-		<title>Open WebUI</title>
+		<title>MTN Chat</title>
 
 		%sveltekit.head%
 	</head>
@@ -194,11 +194,11 @@
 	}
 
 	#splash-screen {
-		background: #fff;
+		background: #ffcc01	;
 	}
 
 	html.dark #splash-screen {
-		background: #000;
+		background: #ffcc01	;
 	}
 
 	html.her #splash-screen {
